# Muna-Shop

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
scripts/: instant-push-perms-with-retry.sh  promote-super-admin.ts
src/: App.tsx  instant.perms.ts  instant.schema.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/actions/: credit-debts.ts  installments.ts  inventory.ts  products.ts  profile.ts  sales.ts  team.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(shop)/: layout.tsx
src/app/login/: page.tsx
src/components/: barcode-input.tsx  empty-state.tsx  loading-state.tsx  local-data-banner.tsx  product-picker.tsx  sync-status-banner.tsx
src/components/layout/: app-sidebar.tsx  header.tsx  shop-shell.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  tabs.tsx
src/context/: shop-session.tsx
src/lib/: admin-db.ts  admin-passcode.ts  auth-roles.ts  auth-server.ts  client-db-write.ts  constants.ts  csv.ts  db.ts  entities.ts  format-money.ts  instant-errors.ts  pl-report.ts  queries.ts  query-keys.ts  role-labels.ts  sqlite-db.ts  super-admin.ts  write.ts
src/pages/: dashboard-page.tsx  installments-page.tsx  inventory-page.tsx  pay-later-page.tsx  products-page.tsx  reports-page.tsx  sales-page.tsx  team-page.tsx
src/providers/: app-providers.tsx  query-provider.tsx
src/styles/: globals.css
(+26 files in other folders)
